feat:shopcart静态页面和动态数据展示

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "koa": "^2.13.0",
+    "koa-router": "^10.0.0",
+    "less": "^4.0.0",
+    "less-loader": "^7.2.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "qrcode": "^1.4.4",
