--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^4.0.0",
     "less-loader": "^7.2.1",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qrcode": "^1.4.4",
     "swiper": "^6.4.5",
